--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ tasks:
     - init: >
         cp .env.example .env;
         pipenv install;
-        mysql -u root -e "CREATE DATABASE user";
+        mysql -u root -e "CREATE DATABASE pwp_page";
         pipenv run init;
         pipenv run migrate;
         pipenv run upgrade;
