--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 
-DB_CONNECTION_STRING=mysql://root@localhost/example
+DB_CONNECTION_STRING=mysql://root@localhost/pwp_page
 FLASK_APP=src/main.py
 FLASK_ENV=development
